- 基本实现了发现页 - todo 发现页listview

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:gravity="end"
-            android:text="历史兑换记录"
-            android:textColor="@color/colorWhite" />
+            android:text="历史兑换记录" />
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
