--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
@@ -21,8 +21,7 @@
         android:layout_below="@+id/toolbar_all_card"
         android:id="@+id/recyclerView_all_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp">
+        android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
 
