--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_bind_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_bind_card.xml
@@ -12,7 +12,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="登录"
+            android:text="绑定卡片"
             android:textSize="20sp"/>
     </FrameLayout>
 
@@ -23,9 +23,15 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView_logo_bind_card"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="10dp"/>
+
         <EditText
             android:background="@drawable/edit_login"
-            android:id="@+id/editText_account_card_points"
+            android:id="@+id/editText_account_bind_card"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_margin="10dp"
@@ -38,7 +44,7 @@
 
         <EditText
             android:background="@drawable/edit_login"
-            android:id="@+id/editText_password_card_points"
+            android:id="@+id/editText_password_bind_card"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_margin="10dp"
@@ -53,39 +59,13 @@
 
     <Button
         android:layout_margin="5dp"
-        android:background="@drawable/login_button"
+        android:background="@drawable/orange_button"
         android:layout_gravity="center"
-        android:id="@+id/button_login_card_points"
+        android:id="@+id/button_bind_bind_card"
         android:layout_width="250dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:text="绑 定"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"/>
 
-    <RelativeLayout
-        android:layout_margin="5dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content">
-        <View
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_width="100dp"
-            android:layout_height="1dp"
-            android:background="#508B8B8B"
-            />
-        <TextView
-            android:id="@+id/textView_register_card_points"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注 册"
-            android:textColor="#8B8B8B"
-            android:textSize="15sp"
-            />
-        <View
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_width="100dp"
-            android:layout_height="1dp"
-            android:background="#508B8B8B"
-            />
-    </RelativeLayout>
 </LinearLayout>
