--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_detail_find"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -22,25 +22,28 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="180dp">
+
             <LinearLayout
-                android:layout_gravity="center"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/imageView_logo_detail_find"
-                    android:layout_width="match_parent"
-                    android:layout_height="84dp"
-                    android:src="@drawable/eastern_logo"/>
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/nike_logo" />
+
                 <TextView
-                    android:layout_marginTop="10dp"
                     android:id="@+id/textView_name_detail_find"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="东方航空"
-                    android:textSize="24sp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
-                    />
+                    android:text="name"
+                    android:textSize="24sp" />
             </LinearLayout>
         </FrameLayout>
 
@@ -60,10 +63,11 @@
                 android:text="商家简介"
                 android:textSize="24sp"/>
             <TextView
+                android:id="@+id/textView_description_detail_find"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="中国东方航空股份有限公司（China Eastern Airlines），是一家总部位于中国上海的国有控股航空公司，在原中国东方航空集团公司的基础上，兼并中国西北航空公司，联合中国云南航空公司重组而成。是中国民航第一家在香港、纽约和上海三地上市的航空公司."/>
+                android:text="description"/>
         </LinearLayout>
 
         <View
@@ -83,51 +87,6 @@
                 android:textSize="24sp"
                 android:layout_marginBottom="5dp"/>
 
-            <LinearLayout
-                android:background="@drawable/rectangle"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:layout_margin="5dp">
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_weight="3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="机票抵扣"
-                        android:textSize="18sp"/>
-                    <ImageView
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/nike_store"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_weight="2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="1000通用积分抵扣100元机票费用"
-                        android:textSize="12sp"/>
-                    <TextView
-                        android:gravity="center_vertical|end"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="天河机场"
-                        android:textSize="12sp"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
 
             <LinearLayout
                 android:background="@drawable/rectangle"
@@ -144,14 +103,15 @@
                         android:layout_weight="3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="机票抵扣"
+                        android:text="item_name"
                         android:textSize="18sp"/>
-                    <ImageView
-                        android:layout_gravity="center_vertical"
+                    <TextView
+                        android:gravity="center_vertical|end"
                         android:layout_weight="1"
                         android:layout_width="0dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/nike_store"/>
+                        android:layout_height="wrap_content"
+                        android:text="time"
+                        android:textSize="12sp"/>
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
@@ -161,15 +121,9 @@
                         android:layout_weight="2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="1000通用积分抵扣100元机票费用"
+                        android:text="item_description"
                         android:textSize="12sp"/>
-                    <TextView
-                        android:gravity="center_vertical|end"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="天河机场"
-                        android:textSize="12sp"/>
+
                 </LinearLayout>
 
 
@@ -211,14 +165,8 @@
                         android:layout_weight="3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="机票打折"
+                        android:text="xxx"
                         android:textSize="18sp"/>
-                    <ImageView
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/nike_store"/>
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
@@ -228,14 +176,7 @@
                         android:layout_weight="2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="暑假期间全场机票6折起"
-                        android:textSize="12sp"/>
-                    <TextView
-                        android:gravity="center_vertical|end"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="天河机场"
+                        android:text="xxxxxxxx"
                         android:textSize="12sp"/>
                 </LinearLayout>
 
