--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_find.xml
@@ -24,7 +24,7 @@
 
                 <ImageView
                     android:layout_centerInParent="true"
-                    android:id="@+id/imageView_activity_find"
+                    android:id="@+id/imageView_logo_find"
                     android:layout_width="78dp"
                     android:layout_height="78dp"
                     android:src="@drawable/nike_store" />
@@ -36,42 +36,38 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="20dp">
                 <TextView
+                    android:id="@+id/textView_name_find"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="东方航空"
+                    android:text="name"
                     android:textSize="24sp"
-                    android:layout_margin="5dp"/>
+                    android:layout_margin="5dp"
+                    android:maxLines="1"/>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/textView_type_find"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="出行"
+                        android:text="type"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="10dp"
                         />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="天河机场"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/nike_store"/>
+
                     <TextView
+                        android:id="@+id/textView_description_find"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="1000通用积分可抵扣100元机票费用"
+                        android:text="description"
+                        android:maxLines="3"
                         android:layout_margin="5dp"/>
                 </LinearLayout>
 
