--- a/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f56d3</color>
+    <!--#3f56d3-->
+    <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#37309f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
