--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
@@ -9,12 +9,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="refresh"
-            android:textAllCaps="false" />
 
         <View
             android:layout_width="0dp"
@@ -35,11 +29,20 @@
             android:text="Open All"
             android:textAllCaps="false" />
 
+        <Button
+            android:id="@+id/refresh"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:textAllCaps="false"
+            android:background="@drawable/ic_refresh_black_24dp"/>
+
     </LinearLayout>
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
