--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
@@ -44,10 +44,13 @@
         <!--</FrameLayout>-->
         <SearchView
             android:id="@+id/editText_search_paying"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="10dp"
             android:layout_height="wrap_content"
             android:queryHint="Search"
-            android:background="@null">
+            android:background="@null"
+            android:focusable="false"
+            android:focusableInTouchMode="false">
 
 
         </SearchView>
