--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code.xml
@@ -7,26 +7,37 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".PayCodeActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_pay_code"
+    <!--<com.bacy.view.titlebar.TitleBar-->
+        <!--android:id="@+id/title_bar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:theme="@style/ToolbarTheme">
+        android:layout_height="wrap_content"/>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="积分码"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar_pay_code"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--android:minHeight="?attr/actionBarSize"-->
+        <!--android:theme="?attr/actionBarTheme"-->
+        <!--app:theme="@style/ToolbarTheme">-->
 
 
-    </android.support.v7.widget.Toolbar>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="积分码"-->
+            <!--android:layout_marginStart="10dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:textSize="18sp" />-->
+
+
+    <!--</android.support.v7.widget.Toolbar>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,15 +61,15 @@
             app:srcCompat="@android:color/background_light"
             android:layout_marginTop="15dp"/>
 
-        <Button
-            android:id="@+id/button_gt_choose_point"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_bg"
-            android:onClick="onClick"
-            android:text="选择积分"
-            android:textColor="@color/colorWhite" />
+        <!--<Button-->
+            <!--android:id="@+id/button_gt_choose_point"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:background="@drawable/button_bg"-->
+            <!--android:onClick="onClick"-->
+            <!--android:text="选择积分"-->
+            <!--android:textColor="@color/colorWhite" />-->
 
     </LinearLayout>
 
